--- a/WebApplication4/Views/SurveyTaker/MultipleAnswer.cshtml
+++ b/WebApplication4/Views/SurveyTaker/MultipleAnswer.cshtml
@@ -6,6 +6,7 @@
     string Quest = ViewBag.Question;
     //Added to get letters in front of the answer
     char letter = Convert.ToChar(065);
+    var ResponseID = ViewBag.ResponseID;
     string blank = ". ";
 }
 
